--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
 
         strategy:
             matrix:
-                php: [8.0, 7.4, 7.3, 7.2, 7.1]
+                php: [8.0, 7.4]
                 dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest]
 
@@ -20,33 +20,17 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v1
+              uses: actions/checkout@v2
 
             - name: Setup PHP
-              uses: shivammathur/setup-php@v1
+              uses: shivammathur/setup-php@v2
               with:
                   php-version: ${{ matrix.php }}
                   extensions: fileinfo, dom, curl, libxml, mbstring, bcmath, soap
                   coverage: none
-                  tools: composer:v2
-
-            - name: Install PHP 7 dependencies
-              run: composer update --${{ matrix.dependency-version }} --no-interaction --no-progress
-              if: "matrix.php < 8"
 
             - name: Install PHP 8 dependencies
               run: composer update --${{ matrix.dependency-version }} --ignore-platform-req=php --no-interaction --no-progress
-              if: "matrix.php >= 8"
 
             - name: Execute tests
               run: vendor/bin/phpunit
-
-            - name: Send Slack notification
-              uses: 8398a7/action-slack@v2
-              if: failure()
-              with:
-                  status: ${{ job.status }}
-                  author_name: ${{ github.actor }}
-              env:
-                  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
