--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,17 @@
     "homepage": "https://github.com/spatie/flare-client-php",
     "license": "MIT",
     "require": {
-        "php": "^7.1|^8.0",
+        "php": "^7.4|^8.0",
         "spatie/ignition-contracts": "~1.0",
-        "illuminate/pipeline": "^5.5|^6.0|^7.0|^8.0",
-        "symfony/http-foundation": "^3.3|^4.1|^5.0",
-        "symfony/mime": "^3.4|^4.0|^5.1",
-        "symfony/var-dumper": "^3.4|^4.0|^5.0"
+        "illuminate/pipeline": "^8.0",
+        "symfony/http-foundation": "^5.0",
+        "symfony/mime": "^5.1",
+        "symfony/var-dumper": "^5.0"
     },
     "require-dev": {
         "dms/phpunit-arraysubset-asserts": "^0.3.0",
-        "friendsofphp/php-cs-fixer": "^2.14",
-        "phpunit/phpunit": "^7.5.16|^8.0|^9.0",
-        "spatie/phpunit-snapshot-assertions": "^2.0|^3.0|^4.0"
+        "phpunit/phpunit": "^9.5",
+        "spatie/phpunit-snapshot-assertions": "^4.0"
     },
     "autoload": {
         "psr-4": {
