--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/pipeline": "^8.0",
+        "illuminate/pipeline": "^7.0|^8.0",
         "spatie/backtrace": "^1.2",
         "spatie/ignition-contracts": "^1.0.3",
         "symfony/http-foundation": "^5.0",
