--- a/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message__1.yml
@@ -16,4 +16,5 @@ message_level: null
 open_frame_index: 0
 application_path: null
 application_version: null
+tracking_uuid: fake-uuid
 uuid: fake-uuid
