--- a/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
@@ -7,6 +7,7 @@ seen_at: 1546305825
 message: 'this is an exception'
 glows: {  }
 solutions: {  }
+documentation_ink: null
 stacktrace: {  }
 context:
     arguments:
