--- a/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
+++ b/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
@@ -7,7 +7,7 @@ seen_at: 1546346096
 message: 'This is a test'
 glows: {  }
 solutions: {  }
-documentation_ink: null
+documentation_links: {  }
 stacktrace: {  }
 context:
     arguments:
