--- a/tests/__snapshots__/ReportTest__it_can_create_a_report_with_glows__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report_with_glows__1.yml
@@ -14,7 +14,7 @@ glows:
             meta: data
         microtime: 1234
 solutions: {  }
-documentation_ink: null
+documentation_links: {  }
 stacktrace: {  }
 context:
     arguments:
