--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
+        "spatie/ignition": "dev-main",
+        "spatie/laravel-ignition": "dev-main",
         "spatie/phpunit-snapshot-assertions": "^4.0"
     },
     "autoload": {
