--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -33,4 +33,4 @@ jobs:
               run: composer update --${{ matrix.dependency-version }} --ignore-platform-req=php --no-interaction --no-progress
 
             - name: Execute tests
-              run: vendor/bin/phpunit
+              run: vendor/bin/pest
