--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,10 +1,6 @@
 name: Run tests
 
-on:
-    push:
-    pull_request:
-    schedule:
-        - cron: '0 0 * * *'
+on: [push, pull_request]
 
 jobs:
     php-tests:
@@ -12,7 +8,7 @@ jobs:
 
         strategy:
             matrix:
-                php: [8.0, 7.4]
+                php: [8.1, 8.0, 7.4]
                 dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest]
 
