--- a/composer.json
+++ b/composer.json
@@ -52,5 +52,7 @@
             "pestphp/pest-plugin": true,
             "phpstan/extension-installer": true
         }
-    }
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
