--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
     "homepage": "https://github.com/spatie/flare-client-php",
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "illuminate/pipeline": "^8.0|^9.0|^10.0|^11.0",
         "spatie/backtrace": "^1.5.2",
         "symfony/http-foundation": "^5.2|^6.0|^7.0",
         "symfony/mime": "^5.2|^6.0|^7.0",
         "symfony/process": "^5.2|^6.0|^7.0",
-        "symfony/var-dumper": "^5.2|^6.0|^7.0"
+        "symfony/var-dumper": "^5.2|^6.0|^7.0",
+        "ext-curl" : "*"
     },
     "require-dev": {
         "dms/phpunit-arraysubset-asserts": "^0.5.0",
