--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     "require": {
         "php": "^8.1",
         "illuminate/pipeline": "^8.0|^9.0|^10.0|^11.0",
+        "psr/container": "^2.0",
         "spatie/backtrace": "^1.6.1",
+        "spatie/error-solutions": "^1.0",
         "symfony/http-foundation": "^5.2|^6.0|^7.0",
         "symfony/mime": "^5.2|^6.0|^7.0",
         "symfony/process": "^5.2|^6.0|^7.0",
