--- a/tests/__snapshots__/ReportTest__it_can_create_a_report_with_glows__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report_with_glows__1.yml
@@ -25,4 +25,5 @@ open_frame_index: null
 application_path: null
 application_version: null
 tracking_uuid: fake-uuid
+handled: null
 uuid: fake-uuid
