--- a/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message__1.yml
@@ -12,6 +12,8 @@ stacktrace: {  }
 context:
     arguments:
         - '[phpunit arguments removed]'
+    env:
+        php_version: 7.3.2
 stage: null
 message_level: null
 open_frame_index: 0
