--- a/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
+++ b/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
@@ -7,7 +7,7 @@ seen_at: 1546346096000
 message: 'This is a test'
 solutions: {  }
 stacktrace: {  }
-stage: null
+application_stage: null
 open_frame_index: null
 application_path: null
 application_version: null
