--- a/tests/__snapshots__/RequestAttributesProviderTest__it_can_return_the_request_context_as_an_array__1.yml
+++ b/tests/__snapshots__/RequestAttributesProviderTest__it_can_return_the_request_context_as_an_array__1.yml
@@ -1,8 +1,11 @@
 url.full: 'http://example.com/test'
-http.request.method: GET
+url.scheme: http
+url.path: /test
+url.query: 'get-key-1=get-value-1&get-key-2=get-value-2'
+server.address: null
+server.port: '80'
 user_agent.original: null
-url.query:
-    get-key-1: get-value-1
+http.request.method: GET
 http.request.files:
     file-one:
         pathname: /tests/stubs/file.txt
@@ -16,6 +19,7 @@ http.request.body.size: 10
 client.address: 1.2.3.4
 http.request.body.contents:
     get-key-1: get-value-1
+    get-key-2: get-value-2
 http.request.headers:
     host: example.com
 http.request.cookies:
