--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@
 /phpunit.xml.dist   export-ignore
 /.scrutinizer.yml   export-ignore
 /tests              export-ignore
+/tests/Shared       -export-ignore
 /.editorconfig      export-ignore
 /docs               export-ignore
 /CONTRIBUTING.md    export-ignore
