--- a/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message__1.yml
@@ -6,11 +6,10 @@ exception_class: Log
 seen_at: 1546305825000000
 message: 'this is a message'
 solutions: {  }
+resource_attributes: {  }
 stacktrace: {  }
-application_stage: null
 open_frame_index: 0
 application_path: null
-application_version: null
 tracking_uuid: fake-uuid
 handled: null
 attributes: {  }
