--- a/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
+++ b/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
@@ -6,11 +6,10 @@ exception_class: PHPUnit\Framework\Exception
 seen_at: 1546346096000000
 message: 'This is a test'
 solutions: {  }
+resource_attributes: {  }
 stacktrace: {  }
-application_stage: null
 open_frame_index: null
 application_path: null
-application_version: null
 tracking_uuid: fake-uuid
 handled: null
 attributes: {  }
