--- a/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
@@ -6,11 +6,10 @@ exception_class: Exception
 seen_at: 1546305825000000
 message: 'this is an exception'
 solutions: {  }
+resource_attributes: {  }
 stacktrace: {  }
-application_stage: null
 open_frame_index: null
 application_path: null
-application_version: null
 tracking_uuid: fake-uuid
 handled: null
 attributes: {  }
