--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
+        "guzzlehttp/guzzle": "^7.9",
         "psr/container": "^2.0",
         "spatie/backtrace": "^1.6.1",
         "spatie/error-solutions": "^1.0",
         "symfony/http-foundation": "^5.2|^6.0|^7.0",
         "symfony/mime": "^5.2|^6.0|^7.0",
         "symfony/process": "^5.2|^6.0|^7.0",
-        "symfony/var-dumper": "^5.2|^6.0|^7.0",
-        "ext-curl" : "*"
+        "symfony/var-dumper": "^5.2|^6.0|^7.0"
     },
     "require-dev": {
         "dms/phpunit-arraysubset-asserts": "^0.5.0",
