--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -2,16 +2,14 @@ parameters:
     level: 8
     paths:
         - src
-    excludePaths:
-        - src/Http/Client
-        - src/FlareMiddleware
-        - src/Context/RequestContextProvider
 
     ignoreErrors:
         - "#Method [a-zA-Z0-9\\_\\\\:\\(\\)]+ has parameter \\$[a-zA-Z0-9_]+ with no value type specified in iterable type array.#"
         - "#Method [a-zA-Z0-9\\_\\\\:\\(\\)]+ return type has no value type specified in iterable type array.#"
         - "#Property [a-zA-Z0-9\\$\\_\\\\:\\(\\)]+ type has no value type specified in iterable type array.#"
-        - "#Illuminate\\\\Contracts\\\\Container\\\\Container#"
+        -
+            message: "#Illuminate\\\\Contracts\\\\Container\\\\Container#"
+            path: src/FlareProvider.php
 
     tmpDir: build/phpstan
     checkMissingIterableValueType: true
