--- a/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
@@ -8,7 +8,7 @@ applicationPath: null
 trackingUuid: fake-uuid
 handled: null
 attributes:
-    service.name: 'My Application'
+    service.name: 'PHP application'
     service.version: null
     service.stage: null
     telemetry.sdk.language: fake-telemetry-sdk-language
