--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -11,6 +11,11 @@ parameters:
 			path: src/Flare.php
 
 		-
+			message: "#^Method Spatie\\\\FlareClient\\\\Flare\\:\\:feedReportFactory\\(\\) should return Spatie\\\\FlareClient\\\\ReportFactory but returns Closure\\|Spatie\\\\FlareClient\\\\ReportFactory\\.$#"
+			count: 1
+			path: src/Flare.php
+
+		-
 			message: "#^Method Spatie\\\\FlareClient\\\\Flare\\:\\:filesystem\\(\\) should return Spatie\\\\FlareClient\\\\Recorders\\\\FilesystemRecorder\\\\FilesystemRecorder\\|Spatie\\\\FlareClient\\\\Recorders\\\\NullRecorder but returns Spatie\\\\FlareClient\\\\Contracts\\\\Recorders\\\\Recorder\\.$#"
 			count: 1
 			path: src/Flare.php
@@ -38,6 +43,11 @@ parameters:
 		-
 			message: "#^Parameter \\#1 \\$callback of function set_error_handler expects \\(callable\\(int, string, string, int\\)\\: bool\\)\\|null, array\\{\\$this\\(Spatie\\\\FlareClient\\\\Flare\\), 'handleError'\\} given\\.$#"
 			count: 2
+			path: src/Flare.php
+
+		-
+			message: "#^Parameter \\#1 \\$report of method Spatie\\\\FlareClient\\\\FlareMiddleware\\\\FlareMiddleware\\:\\:handle\\(\\) expects Spatie\\\\FlareClient\\\\ReportFactory, Closure\\|Spatie\\\\FlareClient\\\\ReportFactory given\\.$#"
+			count: 1
 			path: src/Flare.php
 
 		-
