--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
     },
     "require-dev": {
         "dms/phpunit-arraysubset-asserts": "^0.5.0",
-        "pestphp/pest": "^1.20|^2.0",
+        "pestphp/pest": "^2.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "spatie/pest-plugin-snapshots": "^1.0|^2.0",
+        "spatie/pest-plugin-snapshots": "^2.0",
         "spatie/ray": "^1.41"
     },
     "autoload": {
