--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan-deprecation-rules": "^1.2",
         "phpstan/phpstan-phpunit": "^1.4",
-        "spatie/pest-plugin-snapshots": "^2.2",
-        "spatie/ray": "^1.41"
+        "spatie/pest-plugin-snapshots": "^2.2"
     },
     "autoload": {
         "psr-4": {
