--- a/tests/__snapshots__/ReportTest__it_can_create_an_error_exception_report__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_an_error_exception_report__1.yml
@@ -30,4 +30,5 @@ attributes:
     process.runtime.version: fake-process-runtime-version
     flare.language: PHP
 events: {  }
+isLog: false
 level: E_USER_ERROR
