--- a/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message__1.yml
@@ -28,7 +28,8 @@ attributes:
     process.owner: fake-process-owner
     process.runtime.name: fake-process-runtime-name
     process.runtime.version: fake-process-runtime-version
-    flare.language: PHP
+    flare.language.name: PHP
+    flare.language.version: 8.3.1
 events: {  }
 isLog: true
 level: Error
