--- a/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
+++ b/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
@@ -21,4 +21,5 @@ application_path: null
 application_version: null
 tracking_uuid: fake-uuid
 handled: null
+overridden_grouping: null
 uuid: fake-uuid
