--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -11,7 +11,7 @@ parameters:
 			path: src/Flare.php
 
 		-
-			message: "#^Method Spatie\\\\FlareClient\\\\Flare\\:\\:feedReportFactory\\(\\) should return Spatie\\\\FlareClient\\\\ReportFactory but returns Closure\\|Spatie\\\\FlareClient\\\\ReportFactory\\.$#"
+			message: "#^Method Spatie\\\\FlareClient\\\\Flare\\:\\:externalHttp\\(\\) should return Spatie\\\\FlareClient\\\\Recorders\\\\ExternalHttpRecorder\\\\ExternalHttpRecorder\\|Spatie\\\\FlareClient\\\\Recorders\\\\NullRecorder but returns Spatie\\\\FlareClient\\\\Contracts\\\\Recorders\\\\Recorder\\.$#"
 			count: 1
 			path: src/Flare.php
 
@@ -36,18 +36,23 @@ parameters:
 			path: src/Flare.php
 
 		-
+			message: "#^Method Spatie\\\\FlareClient\\\\Flare\\:\\:redisCommand\\(\\) should return Spatie\\\\FlareClient\\\\Recorders\\\\NullRecorder\\|Spatie\\\\FlareClient\\\\Recorders\\\\RedisCommandRecorder\\\\RedisCommandRecorder but returns Spatie\\\\FlareClient\\\\Contracts\\\\Recorders\\\\Recorder\\.$#"
+			count: 1
+			path: src/Flare.php
+
+		-
 			message: "#^Method Spatie\\\\FlareClient\\\\Flare\\:\\:transaction\\(\\) should return Spatie\\\\FlareClient\\\\Recorders\\\\NullRecorder\\|Spatie\\\\FlareClient\\\\Recorders\\\\TransactionRecorder\\\\TransactionRecorder but returns Spatie\\\\FlareClient\\\\Contracts\\\\Recorders\\\\Recorder\\.$#"
+			count: 1
+			path: src/Flare.php
+
+		-
+			message: "#^Method Spatie\\\\FlareClient\\\\Flare\\:\\:view\\(\\) should return Spatie\\\\FlareClient\\\\Recorders\\\\NullRecorder\\|Spatie\\\\FlareClient\\\\Recorders\\\\ViewRecorder\\\\ViewRecorder but returns Spatie\\\\FlareClient\\\\Contracts\\\\Recorders\\\\Recorder\\.$#"
 			count: 1
 			path: src/Flare.php
 
 		-
 			message: "#^Parameter \\#1 \\$callback of function set_error_handler expects \\(callable\\(int, string, string, int\\)\\: bool\\)\\|null, array\\{\\$this\\(Spatie\\\\FlareClient\\\\Flare\\), 'handleError'\\} given\\.$#"
 			count: 2
-			path: src/Flare.php
-
-		-
-			message: "#^Parameter \\#1 \\$report of method Spatie\\\\FlareClient\\\\FlareMiddleware\\\\FlareMiddleware\\:\\:handle\\(\\) expects Spatie\\\\FlareClient\\\\ReportFactory, Closure\\|Spatie\\\\FlareClient\\\\ReportFactory given\\.$#"
-			count: 1
 			path: src/Flare.php
 
 		-
@@ -74,6 +79,16 @@ parameters:
 			message: "#^Instanceof between Spatie\\\\FlareClient\\\\Recorders\\\\DumpRecorder\\\\DumpSpanEvent and Spatie\\\\FlareClient\\\\Spans\\\\Span will always evaluate to false\\.$#"
 			count: 1
 			path: src/Recorders/DumpRecorder/DumpRecorder.php
+
+		-
+			message: "#^Instanceof between \\*NEVER\\* and Spatie\\\\FlareClient\\\\Spans\\\\SpanEvent will always evaluate to false\\.$#"
+			count: 1
+			path: src/Recorders/ExternalHttpRecorder/ExternalHttpRecorder.php
+
+		-
+			message: "#^Match arm is unreachable because previous comparison is always true\\.$#"
+			count: 1
+			path: src/Recorders/ExternalHttpRecorder/ExternalHttpRecorder.php
 
 		-
 			message: "#^Instanceof between \\*NEVER\\* and Spatie\\\\FlareClient\\\\Spans\\\\SpanEvent will always evaluate to false\\.$#"
@@ -129,6 +144,16 @@ parameters:
 			message: "#^Match arm is unreachable because previous comparison is always true\\.$#"
 			count: 1
 			path: src/Recorders/TransactionRecorder/TransactionRecorder.php
+
+		-
+			message: "#^Instanceof between \\*NEVER\\* and Spatie\\\\FlareClient\\\\Spans\\\\SpanEvent will always evaluate to false\\.$#"
+			count: 1
+			path: src/Recorders/ViewRecorder/ViewRecorder.php
+
+		-
+			message: "#^Match arm is unreachable because previous comparison is always true\\.$#"
+			count: 1
+			path: src/Recorders/ViewRecorder/ViewRecorder.php
 
 		-
 			message: "#^Access to an undefined property Spatie\\\\FlareClient\\\\Contracts\\\\FlareSpanType\\:\\:\\$value\\.$#"
