--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "guzzlehttp/guzzle": "^7.9",
         "psr/container": "^2.0",
         "spatie/backtrace": "^1.6.2",
-        "spatie/error-solutions": "v2.x-dev",
+        "spatie/error-solutions": "^2.0",
         "symfony/http-foundation": "^5.2|^6.0|^7.0",
         "symfony/mime": "^5.2|^6.0|^7.0",
         "symfony/process": "^5.2|^6.0|^7.0",
